# protobuf

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.md  Makefile  README.md  go.mod  go.sum
.github/workflows/: checks.yml
beegfs/: beegfs.proto
beegfs/cpp/: beegfs.pb.cc  beegfs.pb.h
beegfs/go/: beegfs.pb.go
beeremote/: beeremote.proto
beeremote/cpp/: beeremote.pb.cc  beeremote.pb.h
beeremote/go/: beeremote.pb.go  beeremote_grpc.pb.go
beesync/: beesync.proto
beesync/cpp/: beesync.pb.cc  beesync.pb.h
beesync/go/: beesync.pb.go  beesync_grpc.pb.go
beewatch/: beewatch.pb.cc  beewatch.pb.h  beewatch.proto
beewatch/cpp/: beewatch.pb.cc  beewatch.pb.h
beewatch/go/: beewatch.pb.go  beewatch_grpc.pb.go
cpp/: agent.pb.cc  agent.pb.h  beegfs.pb.cc  beegfs.pb.h  beeremote.pb.cc  beeremote.pb.h  beewatch.pb.cc  beewatch.pb.h  flex.pb.cc  flex.pb.h  license.pb.cc  license.pb.h  management.pb.cc  management.pb.h
cpp/beegfs/: beegfs.pb.cc  beegfs.pb.h
cpp/beeremote/: beeremote.pb.cc  beeremote.pb.h
cpp/beewatch/: beewatch.pb.cc  beewatch.pb.h
cpp/flex/: flex.pb.cc  flex.pb.h
go/agent/: agent.pb.go  agent_grpc.pb.go  agent_protoopaque.pb.go
go/beegfs/: beegfs.pb.go  beegfs_grpc.pb.go  beegfs_protoopaque.pb.go
go/beeremote/: beeremote.pb.go  beeremote_grpc.pb.go  beeremote_protoopaque.pb.go
go/beewatch/: beewatch.pb.go  (+2 more)
proto/: agent.proto  beegfs.proto  beeremote.proto  beewatch.proto  flex.proto  license.proto  management.proto
rust/: agent.rs  beegfs.rs  beeremote.rs  beewatch.rs  flex.rs  lib.rs  license.rs  management.rs
(+18 files in other folders)
