[package]
name = "protobuf"
version = "0.1.0"
edition = "2021"

authors = ["ThinkparQ Development Team <development@thinkparq.com>"]
description = "BeeGFS Protobuf definitions"
readme = "README.md"
homepage = "https://github.com/thinkparq/protobuf"
publish = false

[dependencies]
tonic = "~0"
prost = "~0"

[lib]
path = "rust/lib.rs"
